--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "puppeteer": "^2.0.0",
     "request-promise": "^4.2.5",
     "swagger-parser": "^8.0.4",
+    "swagger2openapi": "^5.3.2",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   },
