--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "./node_modules/.bin/gulp --max_old_space_size=8192 dev"
+    "dev": "./node_modules/.bin/gulp --max_old_space_size=8192 dev",
+    "change API version run": "./node_modules/.bin/ts-node changeToOpenAPI3.ts"
   },
   "author": "",
   "license": "ISC",
