--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cheerio-httpcli": "^0.7.4",
     "node-fetch": "^2.6.0",
     "openapi-types": "^1.3.5",
+    "openapi2aspida": "^0.9.0",
     "puppeteer": "^2.0.0",
     "request-promise": "^4.2.5",
     "swagger-parser": "^8.0.4",
