--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^14.0.23",
     "node-fetch": "^2.6.0",
     "openapi-types": "^1.3.5",
     "openapi2aspida": "^0.9.0",
