--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "./node_modules/.bin/gulp --max_old_space_size=8192 dev",
-    "run": "./node_modules/.bin/ts-node changeToOpenAPI3.ts"
+    "run": "./node_modules/.bin/ts-node tools/changeToOpenAPI3.ts"
   },
   "author": "",
   "license": "ISC",
