--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: npmjs release
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -23,11 +23,21 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
+    - name: Install Dependencies
+      run: npm install
 
     # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+    # - name: Generate Type
+    #   run: mkdir @api-types
+    #   run: mkdir @api-types/hoge
+    #   run: npm run gen
+    
+    # Runs a set of commands using the runners shell
+    # - name: Prepare Type
+    #   run: cd @api-types/hoge
+    #   run: npm init
+      # ここでpackage.jsonの名前を書き換える
+    
+    # Runs a set of commands using the runners shell
+    # - name: Publish npm package
+    #   run: npm publish
